--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,11 @@ dependencies:
   fluttertoast: ^8.2.4
   flutter_progress_hud: ^2.0.2
   razorpay_flutter: ^1.3.5
-
+  cached_network_image: ^3.3.1
+  url_launcher: ^6.2.5
+  easy_localization: any
+  flutter_otp_text_field: ^1.1.0+2
   
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -75,6 +77,8 @@ flutter:
     - assets/room2.jpg
     - assets/room3.jpg
     - assets/room3.jpg
+    - assets/translations/en.json
+    - assets/translations/te.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
