--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   url_launcher: ^6.2.5
   easy_localization: any
   flutter_otp_text_field: ^1.1.0+2
+  flutter_easyloading: ^3.0.5
+  video_player: ^2.8.3
   
 dev_dependencies:
   flutter_test:
