--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+      <meta-data
+    android:name="com.google.android.maps.v2.API_KEY"
+    android:value="AIzaSyC6kws__HQq-_KAJ2HxCYQBKZFPk-x9P4s"/>      
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility?hl=en and
